--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: sb3
+name: bandits-sb3
 channels:
   - pytorch
   - conda-forge
@@ -77,7 +77,7 @@ dependencies:
   - tk=8.6.12=h27826a3_0
   - torchaudio=0.11.0=py38_cu113
   - torchvision=0.12.0=py38_cu113
-  - typing_extensions=4.2.0=pyha770c72_0
+  - typing_extensions=4.2.0=pyha770c72_1
   - urllib3=1.26.9=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd8ed1ab_0
   - xorg-libxau=1.0.9=h7f98852_0
@@ -86,17 +86,43 @@ dependencies:
   - zlib=1.2.11=h166bdaf_1014
   - zstd=1.5.2=ha95c52a_0
   - pip:
+    - absl-py==1.0.0
+    - ale-py==0.7.5
+    - autorom==0.4.2
+    - autorom-accept-rom-license==0.4.2
+    - cachetools==5.0.0
+    - click==8.1.2
     - cloudpickle==2.0.0
     - cycler==0.11.0
     - fonttools==4.32.0
+    - google-auth==2.6.5
+    - google-auth-oauthlib==0.4.6
+    - grpcio==1.44.0
     - gym==0.21.0
+    - importlib-metadata==4.11.3
+    - importlib-resources==5.7.1
     - kiwisolver==1.4.2
+    - markdown==3.3.6
     - matplotlib==3.5.1
+    - oauthlib==3.2.0
+    - opencv-python==4.5.5.64
     - packaging==21.3
     - pandas==1.4.2
+    - protobuf==3.20.0
+    - psutil==5.9.0
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
     - pyparsing==3.0.8
     - python-dateutil==2.8.2
     - pytz==2022.1
+    - requests-oauthlib==1.3.1
+    - rsa==4.8
     - six==1.16.0
-    - stable-baselines3==1.5.1a4
-prefix: /home/michael/.local/mambaforge/envs/sb3
+    - stable-baselines3==1.5.0
+    - tensorboard==2.8.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tqdm==4.64.0
+    - werkzeug==2.1.1
+    - zipp==3.8.0
+prefix: /home/michael/.local/mambaforge/envs/bandits-sb3
